# pifp-stellar

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml  semantic_pr.yml  soroban-ci.yml
contracts/pifp_protocol/: Cargo.toml
contracts/pifp_protocol/proptest-regressions/: fuzz_test.txt
contracts/pifp_protocol/src/: events.rs  fuzz_test.rs  invariants.rs  lib.rs  rbac.rs  rbac_test.rs  storage.rs  test.rs  test_events.rs  types.rs
contracts/pifp_protocol/test_snapshots/test/: test_cannot_release_twice.1.json  test_create_project.1.json  test_deposit_and_release.1.json  test_get_project_not_found.1.json  test_get_project_success.1.json  test_minimal.1.json  test_register_project_invalid_deadline.1.json  test_register_project_success.1.json  test_register_second_project_unique_ids.1.json  test_release_insufficient_balance.1.json
scripts/: devops_check.sh  install-hooks.sh  pre-commit-hook.sh  test_quality_gates.sh
